# e57toPtx

./: CMakeLists.txt  README.md  e57Reader.cpp  e57toPtx.cpp
inc/: e57reader.hpp
